# Py4GW_Reforged

./: .gitignore  2.0 full changelog.txt  AGENTS.md  AvChar_Diagnostic.py  Barebones_Example_module.py  Beautiful Pre-Searing.py  Bot_Factory.py  CMakeLists.txt  GWUI Test.py  Hello World Collector Test.py  HeroAI_ParallelTree_Example.py  HeroAI_UI - bkp.py  HeroAI_UI.py  LaunchBar.py  LaunchSurface.py  LaunchSurface_Providers.py  Lightbringer Party Broadcast.py  Map Struct Mapper.py  Patcher.py  Py4GW DEMO 2.0.py  Py4GW.ini  Py4GW_Launcher.py  Py4GW_injection_log.txt  Py4GW_python.pyproj  Py4GW_widget_manager.py  README.md  System Monitor UI.py  Trapezoid Lookup Test.py  av_char_diagnostics.txt  capture_name_surfaces.py  context_diagnostic.py  gwui_scrollable_window_test.py  import_accounts_json.py  light_beacon.py  particle_test.py  perf.txt  radial menu.py  skill_texture_test.py  test_name_obfuscation_smoke.py  test_sqlite3 - Copy - Copy.py  (+1 more)
Bots/Elite Tome Farm/: elite_tome_farmer.py
Bots/Example Bots/: BorealBot_Async_example.py  Boreal_Sequential.py  Boreal_yield.py  Vaettir Async v2.4.py  VaettirBot (Sequential).py  VaettirBot (yield).py
Bots/Halloween/: Every bit Helps.py
Bots/marks_coding_corner/: AlcoholProc.py  AsuraLeveler.py  ConsPrinter.py  DeldrimorLeveler.py  DervCOFFarm.py  DervDustFarm.py  DervFeatherFarm.py  VaettirMarksMods.py  VoltaicSpearTeamFarm.py
BridgeRuntime/: README.md
Examples/: Accept Material Salvaging.py  Boreal_bot_tutorial.py  Chat Spam.py  Coord_Logger.py  Dynamical Dialog Tester3.py  Global_Cache_tester.py  Import_External_Libraries.py  ItemCompare.py  Loot_reader.py  Npc Locator.py  PingHandler.py  PointLogger.py  Script_Template.py  Sequential_template.py  Texture_tester.py  UI send key tester.py  advanced_traffic_light.py  auto combat tester.py  chat spammer.py  chat_capturer.py  chat_command.py  deposit_faction.py  drunk level tester.py  follower.py  fsm_test.py  load script tester.py  mod handler.py  mods.py  move_test.py  multithreading.py  path_planner.py  pathing_maps - Native.py  planned_path_tester.py  quest_handler_test.py  salvage.py  scraper_model_id_list.py  script loader.py  style_test.py  traffic_light.py  traffic_light_sequential.py  (+1 more)
Examples/PackageTemplate/: my_lib.py
HeroAI/: combat.py  commands.py  constants.py  custom_skill.py  globals.py  interrupt.py  party_cache.py  resurrection_scroll.py  settings.py  ui.py  ui_base.py  windows.py
HeroAI/custom_skill_src/: mesmer.py
HeroAI/follow/: editor.py  smart_unstuck.py
HeroAI/hex_removal_src/: hex_removal_config.py  hex_removal_ui.py
Launcher_Redesign/: launcher.html
Legacy code and tests/: Inventory Plus rework.py  Portal zone test.py  Proof Of Legend Farmer.py  System Monitor.py  Tihark Orchard.py  Vanquisher.py  Widget Profiler.py  WindowID tester.py  enc name tester.py  frame_cache_tests.py  frame_log_dump.py  item_filter_tests.py  name tester.py  native profiler.py  native_frame_collapse.py  native_labeled_frame_test.py  native_ui_canvas_test.py  native_ui_testCOPY.py  system_shared_memory_test.py
Legacy code and tests/DEMO/: DEMO_PyImGui.py  DEMO_PyInventory.py  DEMO_PyItem.py  DEMO_PyMerchant.py  DEMO_PyParty.py  DEMO_PySkill.py  DEMO_PySkillbar.py
Legacy code and tests/Deprecated but working/: Auto Inv.py  PCons.py  (+26 more)
Py4GWCoreLib/: Agent.py  BottingTree.py  BuildMgr.py  Camera.py  CombatEvents.py  Context.py  DXOverlay.py  Database.py  EnemyBlacklist.py  GWUI.py  HotkeyManager.py  ImGui.py  ImGui_Legacy.py  IniManager.py  Inventory.py  Item.py  ItemArray.py  Map.py  Overlay.py  Party.py  Pathing.py  Player.py  Py4GWcorelib.py  Quest.py  Scanner.py  SkillManager.py  Skillbar.py  UIManager.py  __init__.py  mods_core.py  mods_types.py  mods_upgrades.py
UI_RE/: button_test.py  devtext_clone_text_component_test.py  devtext_insert_text_frame_test.py  devtext_resource_caption_test.py  empty_window_native_element_test.py  empty_window_text_label_test.py  empty_window_title_override_test.py  encoded_text_payload_dump.py  flat_button_click_test.py  gwui_controls_test.py  helper_frame_callback_graft_test.py  hosted_frame_list_probe_test.py  inventory_component_clone_test.py  inventory_into_devtext_clone_test.py  inventory_into_devtext_test.py  inventory_into_empty_devtext_clone_test.py  native_button_test_harness.py  native_layout_test.py  options_caption_resource_test.py  test_edittext_fix.py  test_slider_fix.py  test_tabs_fix.py  test_tier1_ui.py  text_button_render_test.py  text_label_on_empty_clone_test.py  ui_elements_test.py  weaponbar_component_creation_test.py  window_caption_test.py  window_contents_test.py  window_title_probe_test.py
docs/: 12-project-style-guide.md  Follower_resolves_unstuck.md  ImGui_Facade_Migration_Plan.md  ImGui_Implementation_Correction_Instructions.md  ImGui_Legacy_Functionality_Categorization.md  IniHandler_Removal_Plan.md  IniManager_Gut_To_Settings_Plan.md  IniManager_Migration_Handover.md  IniManager_Migration_Plan.md  LaunchSurface_Component_Guide.md  LaunchSurface_Framework_Design.md  LaunchSurface_Provider_Guide.md  LaunchSurface_Quality_Audit.md  LaunchSurface_UI_Feature_Audit.md  LaunchSurface_User_Manual.md  MCP_bridge.md  Py4GW_Conceptual_Model.md  Py4GW_Model_Features_Detail.txt  agent_name_tag_color.md  bot_factory_session_design.md  bottingtree_and_bt_routines_guide.md  database_manager_and_database_namespace.md  floating_icon_class.md  gwca-game-entity-dependency-map.md  gwca-manager-dependency-map.md  ini_manager_behavior_and_usage_guide.md  module-migration-guide.md  settings_database_cache_model.md  uimgr-migration-plan.md
native_ui_test_tabs/: cleaning_tab.py  rect_tab.py
offsets/: context.json  events.json  friend_list.json  guild.json  item.json  map.json  player.json  quest.json  stoc.json  ui.json
src/: Py4GW.cpp
stubs/: ImGui_Py.pyi  PyAgent.pyi  PyAgentEvents.pyi  PyCallback.pyi  PyCamera.pyi  PyDXOverlay.pyi  PyGameThread.pyi  PyImGui.pyi  PyInventory.pyi  PyItem.pyi  PyKeystroke.pyi  PyOverlay.pyi  PyParticles.pyi  PyParty.pyi  PyPlayer.pyi  PyProfiler.pyi  PySettings.pyi  PySystem.pyi
(+793 files in other folders)
