cmake_minimum_required(VERSION 3.24)

project(Py4GW VERSION 0.1.0 LANGUAGES C CXX)

if(NOT WIN32)
    message(FATAL_ERROR "Py4GW currently targets Windows only.")
endif()

if(CMAKE_SIZEOF_VOID_P AND NOT CMAKE_SIZEOF_VOID_P EQUAL 4)
    message(FATAL_ERROR "Py4GW must be configured as a 32-bit build. Use -A Win32.")
endif()

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

option(PY4GW_BUILD_IMGUI_DEMO "Compile Dear ImGui demo sources." ON)

# Keep the injected DLL beside the runtime payload directories so the module can
# resolve fonts/, scripts/, and offsets/ directly from the repository root.
set(PY4GW_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PY4GW_RUNTIME_OUTPUT_DIRECTORY}")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${PY4GW_RUNTIME_OUTPUT_DIRECTORY}")

foreach(config DEBUG RELEASE RELWITHDEBINFO MINSIZEREL)
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_${config} "${PY4GW_RUNTIME_OUTPUT_DIRECTORY}")
    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_${config} "${PY4GW_RUNTIME_OUTPUT_DIRECTORY}")
endforeach()

find_package(Python3 REQUIRED COMPONENTS Interpreter Development)

add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/third_party/pybind11)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/third_party/minhook)

set(IMGUI_SOURCES
    ${CMAKE_CURRENT_SOURCE_DIR}/third_party/imgui/imgui.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/third_party/imgui/imgui_draw.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/third_party/imgui/imgui_tables.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/third_party/imgui/imgui_widgets.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/third_party/imgui/backends/imgui_impl_dx9.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/third_party/imgui/backends/imgui_impl_win32.cpp
)

if(PY4GW_BUILD_IMGUI_DEMO)
    list(APPEND IMGUI_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/third_party/imgui/imgui_demo.cpp)
endif()

add_library(imgui STATIC ${IMGUI_SOURCES})
target_include_directories(imgui
    PUBLIC
        ${CMAKE_CURRENT_SOURCE_DIR}/third_party/imgui
        ${CMAKE_CURRENT_SOURCE_DIR}/third_party/imgui/backends
)
target_compile_definitions(imgui
    PRIVATE
        IMGUI_DISABLE_OBSOLETE_FUNCTIONS
        NOMINMAX
        WIN32_LEAN_AND_MEAN
)
target_link_libraries(imgui PUBLIC d3d9.lib)

set(IMGUI_ADDON_SOURCES
    ${CMAKE_CURRENT_SOURCE_DIR}/src/imgui/addons/filebrowser_demo.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/imgui/addons/hotkey_demo.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/imgui/addons/markdown_demo.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/imgui/addons/imanim_demo.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/imgui/addons/imgui_club_demo.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/third_party/imgui/addons/ImAnim/im_anim.cpp
)

add_library(imgui_addons STATIC ${IMGUI_ADDON_SOURCES})
target_include_directories(imgui_addons
    PUBLIC
        ${CMAKE_CURRENT_SOURCE_DIR}/include
        ${CMAKE_CURRENT_SOURCE_DIR}/third_party/imgui
        ${CMAKE_CURRENT_SOURCE_DIR}/third_party/imgui/backends
        ${CMAKE_CURRENT_SOURCE_DIR}/third_party/imgui/addons/imgui-filebrowser
        ${CMAKE_CURRENT_SOURCE_DIR}/third_party/imgui/addons/ImHotKey
        ${CMAKE_CURRENT_SOURCE_DIR}/third_party/imgui/addons/imgui_markdown
        ${CMAKE_CURRENT_SOURCE_DIR}/third_party/imgui/addons/ImAnim
        ${CMAKE_CURRENT_SOURCE_DIR}/third_party/imgui/addons/imgui_club/imgui_memory_editor
)
target_compile_definitions(imgui_addons
    PRIVATE
        NOMINMAX
        WIN32_LEAN_AND_MEAN
        _CRT_SECURE_NO_WARNINGS
)
target_compile_options(imgui_addons PRIVATE /FIbase/error_handling.h)
target_link_libraries(imgui_addons PUBLIC imgui d3d9.lib)

set(PY4GW_SOURCES
    src/base/file_scanner.cpp
    src/base/memory_manager.cpp
    src/base/memory_patcher.cpp
    src/base/panic.cpp
    src/GW/GuildWars.cpp
    src/GW/camera/camera_methods.cpp
    src/GW/camera/camera.cpp
    src/GW/context/context.cpp
    src/GW/context/context_methods.cpp
    src/GW/context/skill.cpp
    src/GW/effects/effects_methods.cpp
    src/GW/effects/effects.cpp
    src/GW/events/events_methods.cpp
    src/GW/events/events.cpp
    src/GW/friend_list/friend_list_methods.cpp
    src/GW/friend_list/friend_list.cpp
    src/GW/game_thread/game_thread_methods.cpp
    src/GW/game_thread/game_thread.cpp
    src/GW/guild/guild_methods.cpp
    src/GW/guild/guild.cpp
    src/GW/map/map_methods.cpp
    src/GW/map/map.cpp
    src/GW/player/player_methods.cpp
    src/GW/player/player.cpp
    src/GW/quest/quest_methods.cpp
    src/GW/quest/quest.cpp
    src/GW/render/render_methods.cpp
    src/GW/render/render.cpp
    src/GW/stoc/stoc_methods.cpp
    src/GW/stoc/stoc.cpp
    src/GW/ui/ui_methods.cpp
    src/GW/ui/ui.cpp
    src/base/hooker.cpp
    src/base/patterns.cpp
    src/base/CrashHandler.cpp
    src/dllmain.cpp
    src/imgui/console_host_ui.cpp
    src/imgui/test_ui.cpp
    src/imgui/compact_ui.cpp
    src/imgui/console_ui.cpp
    src/imgui/font_manager.cpp
    src/imgui/imgui_manager.cpp
    src/base/logger.cpp
    src/base/process_manager.cpp
    src/Py4GW.cpp
    src/base/python_runtime.cpp
    src/base/scanner.cpp
)

file(GLOB_RECURSE PY4GW_HEADERS CONFIGURE_DEPENDS
    ${CMAKE_CURRENT_SOURCE_DIR}/include/*.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/*.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/*.h
    ${CMAKE_CURRENT_SOURCE_DIR}/src/*.hpp
)

source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${IMGUI_SOURCES})
source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${PY4GW_SOURCES})
source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${PY4GW_HEADERS})

add_library(Py4GW SHARED ${PY4GW_SOURCES} ${PY4GW_HEADERS})

set_target_properties(Py4GW PROPERTIES
    OUTPUT_NAME "Py4GW"
    PREFIX ""
)

target_include_directories(Py4GW
    PRIVATE
        ${CMAKE_CURRENT_SOURCE_DIR}/include
        ${CMAKE_CURRENT_SOURCE_DIR}/third_party
        ${CMAKE_CURRENT_SOURCE_DIR}/third_party/imgui/addons/imgui-filebrowser
)

target_compile_definitions(Py4GW
    PRIVATE
        NOMINMAX
        WIN32_LEAN_AND_MEAN
        _CRT_SECURE_NO_WARNINGS
        PYBIND11_DETAILED_ERROR_MESSAGES
)
target_compile_options(Py4GW PRIVATE /FIbase/error_handling.h)

target_link_libraries(Py4GW
    PRIVATE
        pybind11::embed
        imgui
        imgui_addons
        minhook
        Python3::Python
        d3d9.lib
        dbghelp.lib
        winmm.lib
)

add_custom_command(TARGET Py4GW POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E copy_directory
        ${CMAKE_CURRENT_SOURCE_DIR}/fonts
        $<TARGET_FILE_DIR:Py4GW>/fonts
    COMMAND ${CMAKE_COMMAND} -E copy_directory
        ${CMAKE_CURRENT_SOURCE_DIR}/scripts
        $<TARGET_FILE_DIR:Py4GW>/scripts
    COMMAND ${CMAKE_COMMAND} -E copy_directory
        ${CMAKE_CURRENT_SOURCE_DIR}/offsets
        $<TARGET_FILE_DIR:Py4GW>/offsets
)
